update pyproject.toml and pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,12 @@
 repos:
-  - repo: local
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.3
     hooks:
-      - id: isort
-        name: isort
-        entry: isort --settings-file ./.isort.cfg .
-        args: ["--profile", "black"]
-        language: system
-        types: [python]
-        pass_filenames: false
+      - id: ruff
+        args: [--fix]
+      - id: ruff-format
 
+  - repo: https://github.com/psf/black
+    rev: 24.4.2
+    hooks:
       - id: black
-        name: black
-        entry: black --config ./.black .
-        language: system
-        types: [python]
-        pass_filenames: false
-
-      - id: flake8
-        name: flake8
-        entry: flake8 --config .flake8 .
-        language: system
-        types: [python]
-        pass_filenames: false
